Add product order service and controller
