# backend/src/db/models/productOrder.ts
@@ -1,12 +1,13 @@
-import { Column, DataType, ForeignKey, Model, Table } from "sequelize-typescript";
+import { Column, DataType, ForeignKey, Model, PrimaryKey, Table } from "sequelize-typescript";
 import Product from "./product";
 import Order from "./order";
 
-interface ProductOrderAttr {
+export interface ProductOrderAttr {
     productId: string,
     orderId: string,
     price: number,
     weight: number,
+    id: string,
 }
 
 @Table
@@ -28,6 +29,15 @@ class ProductOrder extends Model implements ProductOrderAttr {
         allowNull: false,
     })
     weight!: number;
+    
+    @PrimaryKey
+    @Column({
+        type: DataType.UUID,
+        allowNull: false,
+        unique: true,
+        defaultValue: DataType.UUIDV4,
+    })
+    id!: string;
 }
 
 export default ProductOrder;
